welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: value ++ is not a member of Int
	if ( a/10 == b/10 || a%10 ++ b%100 ) {
                                  ^